<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VisualLithuanian</string>
    <string name="english" translatable="false">English</string>
    <string name="lithuanian" translatable="false">Lithuanian</string>
    <string name="action_up" translatable="false">Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="questions" translatable="false">Questions</string>
    <string name="flashcards" translatable="false">Flashcards Fragment</string>
    <string name="add_item" translatable="false">Flash Cards</string>
    <string name="front_side" translatable="false">Front Side</string>
    <string name="Tap" translatable="false">Tap</string>
    <string name="zero" translatable="false">0</string>
    <string name="to_learn" translatable="false">To Learn</string>
    <string name="to_save_the_word" translatable="false">Enjoy Learning</string>
    <string name="back_side" translatable="false">Back_side</string>
    <string name="tap" translatable="false">Labas!</string>
    <string name="word1" translatable="false">word1</string>
    <string name="word2" translatable="false">word2</string>
    <string name="add_word" translatable="false">add</string>
    <string name="empty" translatable="false">empty</string>
    <string name="flip" translatable="false">Flip</string>
    <string name="_0" translatable="false">0</string>
    <string name="select_correct_pair" translatable="false">Select Correct pairs</string>
    <string name="shuffle" translatable="false">Shuffle</string>
    <string name="back" translatable="false">BACK</string>
    <string name="you_don_t_have_any_cards" translatable="false">You don\'t have any cards</string>
    <string name="zero1" translatable="false">0</string>
    <string name="if_you_didn_t_know_swipe_left" translatable="false">If you didn\'t know</string>
    <string name="swipe_left" translatable="false">Swipe left</string>
    <string name="if_you_were_right" translatable="false">if you know</string>
    <string name="swipe_right" translatable="false">Swipe Right</string>
    <string name="english_word" translatable="false">English Word</string>
    <string name="lithuanian_word" translatable="false">Lithuanian word</string>
    <string name="english_phrase" translatable="false">English Phrase</string>
    <string name="lithuanian_phrase" translatable="false">Lithuanian Phrase</string>
    <string name="random_name" translatable="false">Random Name</string>
    <string name="random_name1" translatable="false">Random Name</string>
    <string name="no_cards" translatable="false">No Cards to practise</string>
    <string name="you_have_no_cards" translatable="false">No Cards to learn</string>
    <string name="no_cards_learned" translatable="false">No Cards Learned</string>
    <string name="learned" translatable="false">Learned</string>
    <string name="go" translatable="false">GO!</string>
    <string name="tap_on_cards" translatable="false">Tap on Cards</string>
    <string name="select_your_avatar">SELECT YOUR AVATAR</string>
    <string name="notifications">Notifications</string>
    <string name="progress_track">Progress Track</string>
    <string name="feature_request">Feature Request</string>
    <string name="image_flag" translatable="false">Image flag</string>
    <string name="delete_data">Delete Data</string>
    <string name="about">About</string>
    <string name="help_desk">Help Desk</string>
    <string name="daily_streak_notification" translatable="false">Daily Streak Notification</string>
    <string name="select_time" translatable="false">Select time</string>
    <string name="fire_icon_desc">fire icon image</string>
    <string name="happlocked">happy unocked emoji</string>
    <string name="not_enough_points_image">Not enough points</string>
    <string name="purple_icon_image">Purple Icon</string>
    <string name="play_voice">playing voice</string>
    <string name="image_desc">content description</string>
    <string name="cards_to_learn">Cards To Learn</string>
    <string name="spaceedalgo">Hello, this is Mr. Fox. I will keep track of every single card, and at the right time, I will show it to you again. This way, you won\'t forget it and will retain it in your memory. If you swipe right, I will show the words after a longer period of time. If you swipe left, I will show them sooner.If you have learnt the word you can Swipe Down So, stay tuned and enjoy the learning!</string>
    <string-array name="time_options">
        <item>12:00</item>
        <item>14:00</item>
        <item>16:00</item>
    </string-array>
</resources>