<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearDay"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BACK"
            android:textColor="@color/textColorTypes"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/linearDay"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/catImage"
            android:src="@drawable/cat"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"></ImageView>

        <EditText
            android:id="@+id/editWordEnglish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edit"
            android:singleLine="true"
            android:padding="10dp"
            android:inputType="text"
            android:hint="@string/english_word"
            android:textColor="@color/textColorTypes"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/editWordLithuanian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="text"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edit"
            android:padding="10dp"
            android:hint="@string/lithuanian_word"
            android:textColor="@color/textColorTypes"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/englishPhrase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edit"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:hint="@string/english_phrase"
            android:textColor="@color/textColorTypes"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/lithuanianPhrase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:background="@drawable/rounded_edit"
            android:padding="10dp"
            android:hint="@string/lithuanian_phrase"
            android:textColor="@color/textColorTypes"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="Notify"
            android:id="@+id/btnNotify"
            android:textColor="#FFFF"
            android:background="@drawable/buttoncolor"
            android:layout_height="wrap_content"
            android:gravity="center" />
    </LinearLayout>


</RelativeLayout>
