<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="#f6f5fa"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/flash_tablebar"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_arrow_back" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tap"
                android:layout_marginTop="20dp"
                android:textColor="#FFFF"
                android:textStyle="bold"
                android:textSize="20sp" />
            <ImageView
                android:layout_marginStart="5dp"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:id="@+id/imageStar"
                android:src="@drawable/starjunior"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="#FFF"
                android:text="@string/to_save_the_word"
                android:layout_marginStart="5dp"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/imageSmile"
                android:src="@drawable/laugh"
                android:layout_marginStart="5dp"
                android:layout_marginTop="25dp" />

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_item"
        android:src="@drawable/baseline_library_add_24"
        android:tint="@android:color/white"
        app:backgroundTint="#fa867d"
        app:fabSize="normal" />
    <androidx.cardview.widget.CardView
        android:id="@+id/card_learning"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/text_counter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="18sp"
                android:textColor="#f06292"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:id="@+id/text_card_tolearn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to_learn"
                android:textSize="18sp"
                android:textColor="#f06292"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_questions"
        android:layout_width="240dp"
        android:layout_height="350dp"
        android:layout_below="@id/card_learning"
        android:layout_marginStart="16dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="40dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="#51c6aa"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="60dp">

            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center"
                android:id="@+id/imagecardsHelper" />

            <TextView
                android:id="@+id/text_card_front"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/front_side"
                android:layout_marginTop="5dp"
                android:textColor="#FFFF"
                android:textSize="16sp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
            <TextView
                android:id="@+id/text_card_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back_side"
                android:visibility="invisible"
                android:layout_marginTop="5dp"
                android:textColor="#FFFF"
                android:textSize="16sp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
        </LinearLayout>
        <ImageView
            android:id="@+id/image_flash_card"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="end|top"
            android:scaleType="fitXY"
            android:src="@drawable/star" />
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:background="@drawable/progressbar_drawable"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:indeterminate="false"
        android:max="100"
        android:progress="0"
        android:layout_centerHorizontal="true"
        android:id="@+id/progress_horizontal"
        android:layout_width="240dp"
        android:layout_height="20dp"
        android:layout_below="@id/card_view_questions" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="120dp"
        android:layout_marginTop="10dp"
        android:text="Flip"
        android:id="@+id/btnFlip"
        android:textColor="#FFFF"
        android:background="@drawable/rectangle"
        android:layout_marginBottom="10dp"
        android:layout_height="50dp"
        android:layout_below="@id/progress_horizontal"
        android:gravity="center"
        android:layout_centerHorizontal="true" />
</RelativeLayout>