<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lime_green"
    android:scrollbars="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewAvatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/imageAvatar"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/avatar" />

                <TextView
                    android:id="@+id/textAvatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="40dp"
                    android:text="@string/select_your_avatar"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/blue_card" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardviewNotify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardViewAvatar"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/card_border"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/imageNotify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/notification" />

                <TextView
                    android:id="@+id/textNotify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/blue_card"
                    android:text="@string/notifications" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardviewProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardviewNotify"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/card_border"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/imageProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/progresstrack" />

                <TextView
                    android:id="@+id/textProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/blue_card"
                    android:text="@string/progress_track" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardviewAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardviewProgress"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/card_border"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/imageAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/aboutapp" />

                <TextView
                    android:id="@+id/textAboutApp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/blue_card"
                    android:text="About" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardviewDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardviewAbout"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/card_border"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/imageDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/deletedata" />

                <TextView
                    android:id="@+id/textDeleteData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/blue_card"
                    android:text="Delete Data" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>
